#======================#
#=== WORKSPACE INFO ===#

[workspace]
  resolver = "2"
  members  = ["crate"]
  exclude  = [".github", ".vscode", "docs/*", "examples/*", "promo/*", ".gitignore", "examples/*"]

[workspace.package]
  authors    = ["IDEDARY"]
  version    = "0.3.0"
  edition    = "2021"
  license    = "MIT OR Apache-2.0"
  repository = "https://github.com/bytestring-net/bevy-lunex"
  keywords   = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
  categories = ["gui", "mathematics", "game-development"]

#========================#
#=== PROFILE SETTINGS ===#

[profile.dev]
  debug = 0
  strip = "debuginfo"
  opt-level = 1

[profile.dev.package."*"]
  opt-level = 3

[profile.release]
  opt-level = 3
  panic = 'abort'
  debug = 0
  strip = true
  lto = "thin"
  codegen-units = 1

#===============================#
#=== DEPENDENCIES & FEATURES ===#

[workspace.dependencies]

  # LIBRARY CRATES
  bevy_lunex = { path = "crate" }

  #===========================#
  #=== GAME ENGINE SOURCE === #

  # GAME ENGINE
  bevy = { version = "^0.15.1", default-features = false, features = [
    "bevy_pbr",
    "bevy_sprite",
    "bevy_text",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",

    # Required for doctests
    "x11",
  ] }

  #===============================#
  #=== GAME ENGINE EXTENSIONS === #

  # AUDIO
  bevy_kira_audio  = { version = "^0.22.0" }

  #===========================#
  #=== RUST MISCELLANEOUS === #
  
  radsort   = { version = "^0.1.1" }
  colored   = { version = "^3.0.0" }
  indexmap  = { version = "^2.7.1" }
  thiserror = { version = "^2.0.11" }
