#======================#
#=== WORKSPACE INFO ===#

[workspace]
  resolver = "2"
  members  = ["crate", "examples/*"]
  exclude  = [".github", ".vscode", "docs/*", "promo/*", ".gitattributes", ".gitignore"]

[workspace.package]
  authors    = ["IDEDARY"]
  version    = "0.3.2"
  edition    = "2024"
  license    = "MIT OR Apache-2.0"
  repository = "https://github.com/bytestring-net/bevy-lunex"
  keywords   = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
  categories = ["gui", "mathematics", "game-development"]

#========================#
#=== PROFILE SETTINGS ===#

[profile.dev]
  debug = 0
  strip = "debuginfo"
  opt-level = 1

[profile.dev.package."*"]
  opt-level = 3

[profile.release]
  opt-level = 3
  panic = 'abort'
  debug = 0
  strip = true
  lto = "thin"
  codegen-units = 1

#===============================#
#=== DEPENDENCIES & FEATURES ===#

[workspace.dependencies]

  # LIBRARY CRATES
  bevy_lunex = { path = "crate" }

  #===========================#
  #=== GAME ENGINE SOURCE === #

  # GAME ENGINE
  bevy = { version = "0.16.0-rc.5", default-features = false, features = [
    "bevy_pbr",
    "bevy_sprite",
    "bevy_text",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",

    # Required for doctests
    "x11",
  ] }

  #===============================#
  #=== GAME ENGINE EXTENSIONS === #

  #bevy_rich_text3d  = { version = "^0.2" }
  bevy_rich_text3d = { git = "https://github.com/mintlu8/bevy_rich_text3d" }

  #===========================#
  #=== RUST MISCELLANEOUS === #
  
  radsort   = { version = "^0.1.1" }
  colored   = { version = "^3.0.0" }
