#======================#
#=== WORKSPACE INFO ===#

[workspace]
  resolver = "2"
  members  = ["crate", "examples/*"]
  exclude  = [".github", ".vscode", "docs/*", "promo/*", ".gitattributes", ".gitignore"]

[workspace.package]
  authors    = ["IDEDARY"]
  version    = "0.4.1"
  edition    = "2024"
  license    = "MIT OR Apache-2.0"
  repository = "https://github.com/bytestring-net/bevy-lunex"
  keywords   = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
  categories = ["gui", "mathematics", "game-development"]

#========================#
#=== PROFILE SETTINGS ===#

[profile.dev]
  debug = 0
  strip = "debuginfo"
  opt-level = 1

[profile.dev.package."*"]
  opt-level = 3

[profile.release]
  opt-level = 3
  panic = 'abort'
  debug = 0
  strip = true
  lto = "thin"
  codegen-units = 1

#===============================#
#=== DEPENDENCIES & FEATURES ===#

[workspace.dependencies]

  # LIBRARY CRATES
  bevy_lunex = { path = "crate" }

  #===========================#
  #=== GAME ENGINE SOURCE === #

  ## GAME ENGINE
  bevy_asset = { version = "^0.16.0", default-features = false }
  bevy_app = { version = "^0.16.0", default-features = false }
  bevy_color = { version = "^0.16.0", default-features = false }
  bevy_ecs = { version = "^0.16.0", default-features = false }
  bevy_math = { version = "^0.16.0", default-features = false }
  bevy_text = { version = "^0.16.0", default-features = false }
  bevy_sprite = { version = "^0.16.0", default-features = false }
  bevy_image = { version = "^0.16.0", default-features = false }
  bevy_render = { version = "^0.16.0", default-features = false}
  bevy_platform = { version = "^0.16.0", default-features = false }
  bevy_reflect = { version = "^0.16.0", default-features = false }
  bevy_transform = { version = "^0.16.0", default-features = false }
  bevy_log = { version = "^0.16.0", default-features = false }
  bevy_gizmos = { version = "^0.16.0", default-features = false, features = ["bevy_render"] }
  bevy_window = { version = "^0.16.0", default-features = false }
  bevy_picking = { version = "^0.16.0", default-features = false }
  bevy_input = { version = "^0.16.0", default-features = false }
  bevy_time = { version = "^0.16.0", default-features = false }
  bevy_pbr = { version = "^0.16.0", default-features = false }
  bevy_winit = { version = "^0.16.0", default-features = false, features = ["custom_cursor"]}
  bevy_derive = { version = "^0.16.0", default-features = false }

  #===============================#
  #=== GAME ENGINE EXTENSIONS === #

  bevy_rich_text3d  = { version = "^0.3" }

  #===========================#
  #=== RUST MISCELLANEOUS === #
  
  radsort   = { version = "^0.1.1" }
  colored   = { version = "^3.0.0" }
  rand      = { version = "^0.9.1" }
  getrandom = { version = "^0.3.3", features = ["wasm_js"]}
