#====================#
#=== PACKAGE INFO ===#

[package]
  name = "bevy_lunex"
  description = "Blazingly fast retained UI layout engine for Bevy ECS"
  authors.workspace = true
  version.workspace = true
  edition.workspace = true
  license.workspace = true
  repository.workspace = true
  keywords.workspace = true
  categories.workspace = true

#===============================#
#=== DEPENDENCIES & FEATURES ===#

[dependencies]

  # GAME ENGINE
  bevy = { workspace = true }
  bevy_rich_text3d = { workspace = true, optional = true }

  # RUST MISCELLANEOUS
  radsort = { workspace = true }
  colored = { workspace = true }

[features]

  default = [
    "text3d"
  ]

  text3d = ["dep:bevy_rich_text3d"]
