[package]
  name = "bevy_lunex"
  authors.workspace    = true
  version.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true
  keywords.workspace   = true
  categories.workspace = true
  description = "Blazingly fast path based retained layout engine for Bevy entities, built around vanilla Bevy ECS"

[dependencies]
  bevy         = { workspace = true }
  colored      = { workspace = true }
  lunex_engine = { workspace = true, features = ["bevy"], version = "0.1.0-alpha" }
  bevy_mod_picking = { workspace = true, optional = true }

[features]
  debug = []
  picking = ["bevy_mod_picking"]
