[package]
  name = "bevy_lunex"
  authors.workspace    = true
  version.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true
  keywords.workspace   = true
  categories.workspace = true
  description = "Blazingly fast path based retained layout engine for Bevy entities, built around vanilla Bevy ECS"

[dependencies]
  bevy             = { workspace = true }
  colored          = { workspace = true }
  lunex_engine     = { workspace = true }
  bevy_kira_audio  = { workspace = true, optional = true }
  bevy_mod_picking = { workspace = true }

[features]
  # Default features
  default = []

  # Features
  debug = ["verbose"]
  verbose = []
  kira = ["bevy_kira_audio"]
