[package]
name = "bevy_lunex_core"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
bevy    = { workspace = true }
ahash   = { workspace = true }
colored = { workspace = true }
pathio  = { workspace = true }