[package]
name = "bevy_lunex_macros"
version = "0.0.7"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Dominik Kaspar <dominik0kaspar@gmail.com>"]
repository = "https://github.com/bytestring-net/bevy-lunex"
keywords = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
categories = ["gui", "mathematics", "game-development"]
description = "Supporting crate for bevy_lunex"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
bevy = { version = "0.12.0", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text"] }
