[package]
name = "bevy_lunex_ui"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Dominik Kaspar <dominik0kaspar@gmail.com>"]
repository = "https://github.com/bytestring-net/bevy-lunex"
keywords = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
categories = ["gui", "mathematics", "game-development"]
description = "Supporting crate for bevy_lunex"

[dependencies]
mathio = "0.2.1"
colored = "2.0.0"

#bevy = { git = "https://github.com/bevyengine/bevy", version = "0.12.0-dev", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text"] }
bevy = { version = "0.11.2", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text"] }

bevy_lunex_core = { path = "../bevy_lunex_core", version = "0.0.1"}
bevy_lunex_utility = { path = "../bevy_lunex_utility", version = "0.0.1"}