[package]
name = "bevy_lunex_ui"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_lunex_core = { workspace = true }
bevy_lunex_utility = { workspace = true }
pathio = { workspace = true }
mathio = { workspace = true }
colored = { workspace = true }
