[package]
name = "bevy_lunex_ui_prefab"
version = "0.0.8"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Dominik Kaspar <dominik0kaspar@gmail.com>"]
repository = "https://github.com/bytestring-net/bevy-lunex"
keywords = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
categories = ["gui", "mathematics", "game-development"]
description = "Supporting crate for bevy_lunex"
readme = "README.md"

[dependencies]
bevy = { workspace = true }
#bevy_lunex = { workspace = true }
bevy_vector_shapes = { workspace = true }