[package]
  name = "lunex_engine"
  description = "This crate is not inteded to be used standalone. It is a dependency of Bevy_Lunex"
  authors.workspace    = true
  version.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true
  keywords.workspace   = true
  categories.workspace = true

[dependencies]
  bevy.workspace = true
  colored.workspace = true
  indexmap.workspace = true
  thiserror.workspace = true

[features]
