[package]
  name = "minimal"
  authors.workspace    = true
  version.workspace    = true
  edition.workspace    = true
  publish = false

[dependencies]
  bevy = { version = "0.14.0-rc.3", default_features = false, features = [
    "bevy_asset",
    "bevy_gilrs",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",

    "dynamic_linking",
  ] }
  bevy_lunex   = { workspace = true, features=["debug"] }
