#====================#
#=== EXAMPLE INFO ===#

[package]
  name = "sprite2d"
  authors.workspace = true
  version.workspace = true
  edition.workspace = true
  publish = false

#===============================#
#=== DEPENDENCIES & FEATURES ===#

[dependencies]
  bevy = { version = "0.16.0-rc.5", default-features = true }
  bevy_lunex = { workspace = true }
