#====================#
#=== EXAMPLE INFO ===#

[package]
  name = "sprite3d"
  authors.workspace = true
  version.workspace = true
  edition.workspace = true
  publish = false

#===============================#
#=== DEPENDENCIES & FEATURES ===#

[dependencies]
  bevy = { version = "^0.15", default-features = true }
  bevy_lunex = { workspace = true }
