#====================#
#=== EXAMPLE INFO ===#

[package]
  name = "state-animation"
  authors.workspace = true
  version.workspace = true
  edition.workspace = true
  publish = false

#===============================#
#=== DEPENDENCIES & FEATURES ===#

[dependencies]
  bevy = { version = "^0.16", default-features = true }
  bevy_lunex = { workspace = true }
