[package]
  name = "worldspace"
  authors.workspace    = true
  version.workspace    = true
  edition.workspace    = true
  publish = false

[dependencies]
  bevy = { version = "^0.14.0", default_features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "multi_threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "tonemapping_luts",
  ] }
  bevy_lunex   = { workspace = true, features=["debug"] }
