[package]
name = "lunex_office_suite_example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy_lunex = { path = "../../../../bevy-lunex"}
bevy_lunex_ui_prefab = { path = "../../../../bevy-lunex/crates/bevy_lunex_ui_prefab"}

bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_vector_shapes = "0.5.1"
